--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -10,6 +12,7 @@ html {
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 ol, ul {
@@ -35,5 +38,5 @@ img {
 }
 
 .dropdown-filter{
-  
+
 }
